@@ -1,3 +1,8 @@
+2007-03-15  Mike Kestner  <mkestner@novell.com>
+
+	* generator/CallbackGen.cs : generate try/catch blocks for
+	native to managed marshallers.  [Fixes the rest of #80516]
+
 2007-03-08  Mike Kestner  <mkestner@novell.com>
 
 	* glib/Signal.cs : guard against NULL gchandles.
